--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,30 @@
             </table>
           </div>
 
+          <div id="teachers" class="content-page">
+            <h2>Teacher Management</h2>
+            <div class="d-flex justify-content-between mb-3">
+              <input type="text" class="form-control w-25" placeholder="Search teachers...">
+              <button class="btn btn-primary" id="add-teacher-btn">
+                <i class="bi bi-plus"></i> Add New Teacher
+              </button>
+            </div>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Subject</th>
+                  <th>Contact</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="teachers-table-body">
+                <!-- Teacher data will be loaded here -->
+              </tbody>
+            </table>
+          </div>
+
           <!-- Other content pages will be added here -->
         </div>
       </div>
