classes are added.

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Students</h5>
-                    <h2 class="card-text">250</h2>
+                    <h2 class="card-text" id="student-count">0</h2>
                     <p class="text-muted">Total enrolled students</p>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Teachers</h5>
-                    <h2 class="card-text">32</h2>
+                    <h2 class="card-text" id="teacher-count">0</h2>
                     <p class="text-muted">Faculty members</p>
                   </div>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Classes</h5>
-                    <h2 class="card-text">48</h2>
+                    <h2 class="card-text" id="class-count">0</h2>
                     <p class="text-muted">Active classes</p>
                   </div>
                 </div>
@@ -105,6 +105,7 @@
                   <th>ID</th>
                   <th>Name</th>
                   <th>Grade</th>
+                  <th>Class</th>
                   <th>Contact</th>
                   <th>Actions</th>
                 </tr>
@@ -135,6 +136,31 @@
               </thead>
               <tbody id="teachers-table-body">
                 <!-- Teacher data will be loaded here -->
+              </tbody>
+            </table>
+          </div>
+
+          <div id="classes" class="content-page">
+            <h2>Class Management</h2>
+            <div class="d-flex justify-content-between mb-3">
+              <input type="text" class="form-control w-25" placeholder="Search classes...">
+              <button class="btn btn-primary" id="add-class-btn">
+                <i class="bi bi-plus"></i> Add New Class
+              </button>
+            </div>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Subject</th>
+                  <th>Teacher</th>
+                  <th>Schedule</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="classes-table-body">
+                <!-- Class data will be loaded here -->
               </tbody>
             </table>
           </div>
