fixed the search

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
           <div id="students" class="content-page">
             <h2>Student Management</h2>
             <div class="d-flex justify-content-between mb-3">
-              <input type="text" class="form-control w-25" placeholder="Search students...">
+              <input type="text" id="student-search-input" class="form-control w-25" placeholder="Search students...">
               <button class="btn btn-primary" id="add-student-btn">
                 <i class="bi bi-plus"></i> Add New Student
               </button>
@@ -119,7 +119,7 @@
           <div id="teachers" class="content-page">
             <h2>Teacher Management</h2>
             <div class="d-flex justify-content-between mb-3">
-              <input type="text" class="form-control w-25" placeholder="Search teachers...">
+              <input type="text" id="teacher-search-input" class="form-control w-25" placeholder="Search teachers...">
               <button class="btn btn-primary" id="add-teacher-btn">
                 <i class="bi bi-plus"></i> Add New Teacher
               </button>
@@ -143,7 +143,7 @@
           <div id="classes" class="content-page">
             <h2>Class Management</h2>
             <div class="d-flex justify-content-between mb-3">
-              <input type="text" class="form-control w-25" placeholder="Search classes...">
+              <input type="text" id="class-search-input" class="form-control w-25" placeholder="Search classes...">
               <button class="btn btn-primary" id="add-class-btn">
                 <i class="bi bi-plus"></i> Add New Class
               </button>
