--- a/src/index.html
+++ b/src/index.html
@@ -9,53 +9,43 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row">
-      <!-- Sidebar Navigation -->
-      <div class="col-md-3 col-lg-2 sidebar">
-        <div class="app-title">
-          <h3>SchoolSync</h3>
+    <div class="row vh-100">
+      <!-- Sidebar -->
+      <div class="col-md-2 text-white p-0 sidebar" style="background-color: #2c3e50;">
+        <div class="d-flex flex-column h-100">
+          <div class="p-3 text-center">
+            <img id="app-logo" src="assets/default-logo.png" alt="SchoolSync Logo" class="img-fluid mb-2" style="max-height: 80px;">
+            <h4 class="fs-5 mb-0">SchoolSync</h4>
+            <small class="text-muted">School Management System</small>
+          </div>
+          <nav class="nav flex-column mt-2">
+            <a href="#" class="nav-link active" data-page="dashboard">
+              <i class="bi bi-speedometer2 me-2"></i> Dashboard
+            </a>
+            <a href="#" class="nav-link" data-page="students">
+              <i class="bi bi-people me-2"></i> Students
+            </a>
+            <a href="#" class="nav-link" data-page="teachers">
+              <i class="bi bi-person-badge me-2"></i> Teachers
+            </a>
+            <a href="#" class="nav-link" data-page="classes">
+              <i class="bi bi-calendar3 me-2"></i> Classes
+            </a>
+            <a href="#" class="nav-link" data-page="attendance">
+              <i class="bi bi-check2-square me-2"></i> Attendance
+            </a>
+            <a href="#" class="nav-link" data-page="grades">
+              <i class="bi bi-bar-chart me-2"></i> Grades
+            </a>
+            <a href="#" class="nav-link" data-page="settings">
+              <i class="bi bi-gear me-2"></i> Settings
+            </a>
+          </nav>
         </div>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#" data-page="dashboard">
-              <i class="bi bi-speedometer2"></i> Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="students">
-              <i class="bi bi-people"></i> Students
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="teachers">
-              <i class="bi bi-person-badge"></i> Teachers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="classes">
-              <i class="bi bi-calendar3"></i> Classes
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="attendance">
-              <i class="bi bi-check2-square"></i> Attendance
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="grades">
-              <i class="bi bi-bar-chart"></i> Grades
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-page="settings">
-              <i class="bi bi-gear"></i> Settings
-            </a>
-          </li>
-        </ul>
       </div>
 
       <!-- Main Content Area -->
-      <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4 main-content">
+      <div class="col-md-10 ms-sm-auto col-lg-10 px-md-4 main-content">
         <div id="content-area">
           <!-- Content will be loaded here dynamically -->
           <div id="dashboard" class="content-page active">
@@ -389,31 +379,51 @@
                     </div>
                     <div class="card-body">
                       <form id="school-info-form">
-                        <div class="mb-3">
-                          <label for="school-name" class="form-label">School Name</label>
-                          <input type="text" class="form-control" id="school-name">
-                        </div>
-                        <div class="mb-3">
-                          <label for="school-address" class="form-label">Address</label>
-                          <textarea class="form-control" id="school-address" rows="3"></textarea>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-6 mb-3">
-                            <label for="school-phone" class="form-label">Phone</label>
-                            <input type="tel" class="form-control" id="school-phone">
+                        <div class="row mb-3">
+                          <div class="col-md-6">
+                            <div class="mb-3">
+                              <label for="school-name" class="form-label">School Name</label>
+                              <input type="text" class="form-control" id="school-name">
+                            </div>
+                            <div class="mb-3">
+                              <label for="school-address" class="form-label">Address</label>
+                              <textarea class="form-control" id="school-address" rows="3"></textarea>
+                            </div>
+                            <div class="row">
+                              <div class="col-md-6 mb-3">
+                                <label for="school-phone" class="form-label">Phone</label>
+                                <input type="tel" class="form-control" id="school-phone">
+                              </div>
+                              <div class="col-md-6 mb-3">
+                                <label for="school-email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="school-email">
+                              </div>
+                            </div>
+                            <div class="mb-3">
+                              <label for="school-website" class="form-label">Website</label>
+                              <input type="url" class="form-control" id="school-website">
+                            </div>
+                            <div class="mb-3">
+                              <label for="school-principal" class="form-label">Principal Name</label>
+                              <input type="text" class="form-control" id="school-principal">
+                            </div>
                           </div>
-                          <div class="col-md-6 mb-3">
-                            <label for="school-email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="school-email">
+                          <div class="col-md-6">
+                            <div class="mb-3">
+                              <label class="form-label">School Logo</label>
+                              <div class="card p-3 text-center">
+                                <div id="logo-preview-container" class="mb-3">
+                                  <img id="school-logo-preview" src="assets/default-logo.png" alt="School Logo" class="img-fluid" style="max-height: 150px;">
+                                </div>
+                                <div class="mb-3">
+                                  <button type="button" class="btn btn-outline-primary" id="select-logo-btn">
+                                    <i class="bi bi-upload"></i> Select Logo
+                                  </button>
+                                </div>
+                                <small class="text-muted">Recommended size: 200x200 pixels. PNG or JPG format.</small>
+                              </div>
+                            </div>
                           </div>
-                        </div>
-                        <div class="mb-3">
-                          <label for="school-website" class="form-label">Website</label>
-                          <input type="url" class="form-control" id="school-website">
-                        </div>
-                        <div class="mb-3">
-                          <label for="school-principal" class="form-label">Principal Name</label>
-                          <input type="text" class="form-control" id="school-principal">
                         </div>
                         <button type="button" class="btn btn-primary" id="save-school-info-btn">Save Information</button>
                       </form>
